<resources>
    <string name="app_name">PodGo</string>
    <string name="media_service_name">MediaService</string>
    <string name="action_settings">Settings</string>
    <string name="enter_the_rss_feed_url">Enter the RSS feed URL:</string>
    <string name="new_podcast_ok">OK</string>
    <string name="new_podcast_cancel">Cancel</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="seek_back">Seek Back</string>
    <string name="seek_forward">Seek Forward</string>
    <string name="default_podcast_title_list_item">Podcast Title</string>
    <string name="podcast_image_list_item">Podcast Image</string>
    <string name="title_activity_podcast_acitivity">PodcastAcitivity</string>
    <string name="episode_title_list_item">Episode Title</string>
    <string name="load_all_episodes">Load All Episodes</string>
    <string name="filter_episodes">Filter Episodes</string>
    <string name="podcast_image">Podcast Image</string>
    <string name="action_new_podcast">Add New Podcast</string>
    <string name="action_delete_podcast">Delete Podcast</string>
    <string name="podcast_options">Podcast Options</string>
    <string name="episode_image">Episode Image</string>
    <string name="episode_title">Episode Title</string>
    <string name="podcast_title">Podcast Title</string>
    <string name="search_itunes">Search Itunes</string>
    <string name="search_hint">Search Itunes</string>
    <string name="add_new_feed">Add New Feed</string>
    <string name="refresh_feed">Refresh Feed</string>
    <string name="delete_feed">Delete Feed</string>
</resources>
