<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="me.bromen.podgo.activities.home.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:theme="@style/ToolbarTheme"
        app:popupTheme="@style/AppTheme.NoActionBar"
        />

    <FrameLayout
        android:id="@+id/mediaplayer_bar_main"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mediaplayer_bar_height"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_main"
        android:layout_above="@id/mediaplayer_bar_main"
        />

    <TextView
        android:id="@+id/textview_main_nopodcasts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/mediaplayer_bar_main"
        android:gravity="center"
        android:visibility="gone"
        android:text="No Podcasts Saved"
        />

</RelativeLayout>
