...
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.bromen.podgo.activities.newfeed.NewFeedActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_newfeed"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ToolbarTheme"
        app:popupTheme="@style/AppTheme.NoActionBar"
        />
...
